[workspace]
members = [
    "support",
    "basic",
    "arrive",
    "wander",
    "obstacle_avoidance",
    "path_following",
    "blended",
    "flocking",
    "kinematic_2d",
    "pursuit_evasion",
    "formation",
    "crowd_simulation",
    "custom_behavior",
    "lab",
]
resolver = "3"

[workspace.dependencies]
bevy = "0.18"
bevy_flair = "0.7"
bevy_input_focus = "0.18"
bevy_ui_widgets = "0.18"
saddle-pane = { git = "https://github.com/julien-blanchon/saddle-pane" }
saddle-bevy-e2e = { git = "https://github.com/julien-blanchon/saddle-bevy-e2e", features = ["json"] }
saddle-ai-steering = { path = ".." }
steering = { path = "..", package = "saddle-ai-steering" }

[workspace.lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"
collapsible_if = "allow"
