[package]
name = "steering_example_formation"
version = "0.1.0"
edition = "2024"
publish = false

[features]
e2e = ["dep:saddle-bevy-e2e"]

[dependencies]
bevy = { workspace = true }
saddle-pane = { workspace = true }
steering = { workspace = true }
steering_example_support = { path = "../support" }
saddle-bevy-e2e = { workspace = true, optional = true }

[lints]
workspace = true
